# sundry-musings

./: .dockerignore  .editorconfig  .gitignore  .shellcheckrc  Cipher Solver.ipynb  README.md  bathroomSign.py  bathroomSign.tex  castleGame.py  pylintrc  pyproject.toml  setup.cfg  warGame.py
archive/cgd/: visualizations.py
archive/multiple_dispatch/: README.md  multiple_dispatch.py  test_multiple_dispatch.py
archive/riddlers/: supremeCourt.py  warGame.py
archive/riddlers/bathroom_sign/: bathroomSign.py
archive/riddlers/castle_game/: castleGame.py  castleGame2.py  results40.pkl
cgd/: visualizations.py
cgd/Data_Extract_From_Poverty_and_Equity/: d54002b5-dcc2-4438-94d4-38ba58ab3ed4_Data.csv  d54002b5-dcc2-4438-94d4-38ba58ab3ed4_Definition and Source.csv
docker/: Dockerfile  build_image.sh  create_conda_env.sh  create_container.sh  exec.sh  inner_exec.sh  install_packages.sh  install_shfmt.sh  strict_mode.sh  timer.sh
multiple_dispatch/: multiple_dispatch.py  test_multiple_dispatch.py
notebooks/: Wordle.ipynb  run.sh
requirements/: environment.yaml  inner_update.sh  requirements.in  requirements.txt  update.sh
riddlers/: supremeCourt.py
riddlers/bathroom_sign/: bathroomSign.py
riddlers/castle_game/: castleGame.py  castleGame2.py
src/util/: __init__.py  _time.py
src/wordle/: __init__.py  _metrics.py  _solve.py  _submit.py  _types.py
test/: black.sh  inner_shellcheck.sh  isort.sh  mypy.sh  pylint.sh  requirements.sh  shellcheck.sh  shfmt.sh  test.sh  unit_tests.sh
