[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
verbose = true
color = true
target_version = ["py39"]
line_length = 88

[tool.isort]
verbose = true
profile = "black"
skip_gitignore = true
line_length = 88

[tool.mypy]
cache_dir = "~/.cache/mypy"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
addopts = "-ra --verbose --color=yes"
testpaths = ["test/unit_tests"]
